--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -13,5 +13,5 @@ jobs:
         uses: matchai/waka-box@master
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIST_ID: ${{ secrets.GIST_ID }}
+          GIST_ID: b5e7372550eadf9ddd7dd8f266ad8650
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
